--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/bcrypt": "^5.0.2"    
   },
   "dependencies": {
     "express": "^5.1.0",
