--- a/backend/package.json
+++ b/backend/package.json
@@ -20,20 +20,21 @@
   },
   "homepage": "https://github.com/RsixB/MRU-HACKS#readme",
   "devDependencies": {
-    "nodemon": "3.1.10",
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/bcrypt": "^5.0.2"    
+    "nodemon": "3.1.10"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "mongoose": "^8.18.2",  
-    "jsonwebtoken": "^9.0.2"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.2"
   }
 }
