--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "openai": "^6.1.0"
   }
 }
