--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,10 +4,13 @@
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/Logo1.png",
     "scheme": "frontend",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "extra": {
+      "expoPublicApiUrl": "http://192.168.1.42:3000"
+    },    
     "ios": {
       "supportsTablet": true
     },
