--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
-    "openai": "^6.1.0"
+    "openai": "^6.1.0",
+    "socket.io": "^4.8.1"
   }
 }
